--- a/byzantine_geberals_problem/byzantine_generals_problem.csproj
+++ b/byzantine_geberals_problem/byzantine_generals_problem.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFrameworks>net7.0-windows</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
