--- a/byzantine_geberals_problem/byzantine_generals_problem.csproj
+++ b/byzantine_geberals_problem/byzantine_generals_problem.csproj
@@ -8,4 +8,8 @@
     <TargetFrameworks>net7.0-windows</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
